syntax = "proto3";
package cosmos.auth.v1beta1;

import "google/api/annotations.proto";
import "auth/auth.proto";
import "pagination.proto";


service Query {
  rpc Accounts(QueryAccountsRequest) returns (QueryAccountsResponse) {
    option (google.api.http).get = "/cosmos/auth/v1beta1/accounts";
  }

  rpc Account(QueryAccountRequest) returns (QueryAccountResponse) {
    option (google.api.http).get = "/cosmos/auth/v1beta1/accounts/{address}";
  }

  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos/auth/v1beta1/params";
  }
}

message QueryAccountsRequest {
  cosmos.base.v1beta1.PageRequest pagination = 1;
}

message QueryAccountsResponse {
  repeated BaseAccount accounts = 1;
  cosmos.base.v1beta1.PageResponse pagination = 2;
}

message QueryAccountRequest {
  string address = 1;
}

message QueryAccountResponse {
  BaseAccount account = 1;
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1;
}
